--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,16 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Genos", sans-serif;
-  background-image: url("./images/sw-bg.jpg");
+  background-image: url("./images/space.jpeg");
   background-size: cover;
+  color: #fff;
+  line-height: 1.5;
+}
+
+h1,
+h2,
+h3,
+p {
+  margin: 0;
+  padding: 0;
 }
